Archive2/38/73e0bb03785514/output
main.cpp: In function 'int main()':
main.cpp:17:39: error: 'RTR' was not declared in this scope
     std::vector<std::string> words = {RTR
                                       ^
main.cpp:18:9: error: expected '}' before string constant
         "Test"
         ^
main.cpp:18:9: error: could not convert '{<expression error>}' from '<brace-enclosed initializer list>' to 'std::vector<std::basic_string<char> >'
main.cpp:18:9: error: expected ',' or ';' before string constant
main.cpp: At global scope:
main.cpp:19:6: warning: extra ';' [-Wpedantic]
     };
      ^
main.cpp:20:10: error: 'cout' in namespace 'std' does not name a type
     std::cout << words << std::endl;
          ^
main.cpp:21:1: error: expected declaration before '}' token
 }
 ^
